--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
 .terraform.lock.hcl
-.terraform/providers/registry.terraform.io/digitalocean/digitalocean/2.43.0/darwin_arm64
-.terraform/modules
-terraform.tfstate
+.terraform
+terraform.tfstate*
